--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <header class="e1">
         <h1 class="encabezado"> Proyecto 3 Fullstack Bootcamp UCamp</h1>
     </header>
+    <div class="titulo">
+        <h1>¿Cómo está el clima hoy?</h1>
+    </div>
 </body>
 </html>
