--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
         <h1 class="encabezado"> Proyecto 3 Fullstack Bootcamp UCamp</h1>
     </header>
     <div class="titulo">
-        <h1>¿Cómo está el clima hoy?</h1>
+        <h1 class="pregunta">¿Cómo está el clima hoy?</h1>
     </div>
+
+    <footer>
+        <h3 class="pie"> 2022 DMBC</h3>
+    </footer>
 </body>
 </html>
