ARREGLO EN TÍTULOS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <!--Título Principal-->
-    <header class="encabezado"> ¿Cómo está el clima hoy?</header>
+    <header class="encabezado">
+        <h1>¿Cómo está el clima hoy?</h1>
+    </header>
 
     <!--CUERPO DE LA PÁGINA-->
     <main>
@@ -50,7 +52,8 @@
     </div>
     <!--FOOTER DE LA PÁGINA-->
     <footer id="foot">
-        <h1> CBMD 2022 Bootcamp Ucamp</h1>
+        <h2>CBMD - 2022 Bootcamp | Ucamp</h2>
+        <h4> <a href="https://github.com/Crisrty/Proyecto-3-Bootcamp">Repositorio en GitHub</a></h4>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <!--<script src="grafica.js"></script>-->
