--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clima API</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Images/Icons/clima.png">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <!-- ATENCIÓN!! -->
@@ -57,7 +58,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
     <!--<script src="grafica.js"></script>-->
-    <script type="module" src="main.js"></script>
+    <script type="module" src="Scripts.js/main.js"></script>
 </body>
 
 </html>
