--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <!--GRÁFICOS DEL CLIMA-->
 
-    <div class="grafico_gen" id="grafico_gene">
-        <canvas id="myChart" style="height: 100%;" class="myChart"></canvas>
+    <div class="grafico_gen" id="grafico_gene" style="height: 100%;">
+        <canvas id="myChart" class="myChart"></canvas>
     </div>
     <!--FOOTER DE LA PÁGINA-->
     <footer id="foot">
