--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </main>
     <!--FOOTER DE LA PÁGINA-->
     <footer id="foot">
-        <h2>CBMD - 2022 Bootcamp | Ucamp</h2>
+        <h2>CBMD - 2022 Ucamp | Ucamp</h2>
         <h4> <a href="https://github.com/Crisrty/Proyecto-3-Bootcamp">Repositorio en GitHub</a></h4>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
